# RPC.nvim

./: .gitignore  .gitmodules  CMakeLists.txt.dynamic  CMakeLists.txt.static  Makefile  README.md  schema.proto
encoder/: CMakeLists.txt  Makefile  encoder.c  encoder.h  encoder.pc.in
ipc/: CMakeLists.txt  Makefile  ipcwriter.c  ipcwriter.h  ipcwriter.pc.in  schema.proto  serialize.c  serialize.h
lua/RPC/: init.lua  ipc.lua  logger.lua  options.lua  ringbuf.lua  state.lua  struct_doc.lua  utils.lua
lua/richpresence/: init.lua  options.lua  state.lua  utils.lua
middleware/: CMakeLists.txt  Makefile  discord.c  discord.h  init.c  init.h  logger.c  logger.h  middleware.c  middleware.h  middleware_config.h.in  schema.proto  serialize.c  serialize.h
pack/: CMakeLists.txt  Makefile  pack.c
pack/lua5.3/: lprefix.h  lstrlib.c
pack/scratch/: char.c  int.c  pack.c  unpack.c
sdk/: CMakeLists.txt  Makefile  callback.c  callback.h  init.c  init.h  sdk.c  sdk.h  sdk.pc.in  state.c  state.h
uuid4/: CMakeLists.txt  Makefile  uuid.c
